[build-system]
requires = ["poetry-core", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linien-influxdb"
description = "Log status of linien locking application to influxdb"
authors = [
    {name = "Bastian Leykauf"},
    {email = "leykauf@physik.hu-berlin.de"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "influxdb-client>=1.27.0",
    "configparser>=5.2.0",
    "click>=8.1.2",
    "linien-python-client>=^0.5.3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black>=22.8.0",
    "pre-commit>=2.20.0",
    "flake8>=5.0.4",
    "rope>=1.3.0",
    "isort>=5.10.1",
    "Flake8-pyproject>=1.1.0.post0",
    "setuptools_scm>=6.2",
]

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/linien-org/linien/"
repository = "https://github.com/linien-org/linien/"

[project.scripts]
linien-influxdb = "linien_influxdb.app:main"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"
